# MEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_linux.sh  build_macos.sh  build_win.bat  install.sh  install_linux.sh  install_macos.sh  install_win.bat
DemoGame/: CMakeLists.txt  demogame.def
DemoGame/src/: game.c
EMCrashHandler/: CMakeLists.txt
EMCrashHandler/src/: emstatus.h
EMCrashHandler/src/posix/: main.c
EMCrashHandler/src/win32/: winmain.c
MEngine/: CMakeLists.txt
MEngine/src/: mservices.h
MEngine/src/common/: cmd.c  common.c  common.h  config.c  cvar.c  event.c  filesystem.c  input.c  input.h  keycodes.h  log.c  memory.c
MEngine/src/renderer/: emgl.c  emgl.h  renderer.c  renderer.h  rendererinit.c  world.c  world.h
MEngine/src/sys/: sys.h
MEngine/src/sys/linux/: linuxglwnd.c  linuxlocal.h  main.c  syslinux.c  wndcb.c
MEngine/src/sys/posix/: main.c  posixglwnd.c  posixinput.c  posixlocal.h  sysposix.c  wndcb.c
MEngine/src/sys/posix/linux/: syslinux.c
MEngine/src/sys/posix/macos/: sysmacos.c
MEngine/src/sys/win32/: glwnd.c  syswin.c  winemgl.c  wininput.c  winlocal.h  winmain.c  wndproc.c
